force-app/main/default/objects/Int_PX_NSF__c/Int_PX_NSF__c.object-meta.xml
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
 
    <label>Int PX NSF</label>
    <nameField>
        <displayFormat>NSF-{00000000}</displayFormat>
        <label>Custom Object Label Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int PX NSF</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>