force-app/main/default/objects/Int_PX_NSF__c/fields/Account_Num__c.field-meta.xml
<CustomField>
    <fullName>Account_Num__c</fullName>
    <label>Account Num</label>
    <length>20</length>
    <type>Text</type>
</CustomField>