force-app/main/default/objects/Int_PX_NSF__c/fields/Invoice_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Amount_Paid__c</fullName>
    <label>Invoice Amount Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>