force-app/main/default/objects/Int_PX_NSF__c/fields/NSF_Amount__c.field-meta.xml
<CustomField>
    <fullName>NSF_Amount__c</fullName>
    <label>NSF Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>