force-app/main/default/objects/Int_PX_NSF__c/fields/Payment_Batch_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Batch_Date__c</fullName>
    <label>Payment Batch Date</label>
    <type>Date</type>
</CustomField>