force-app/main/default/objects/Int_PX_NSF__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Committed__c</columns>
    <columns>Record_Number__c</columns>
    <columns>Transaction_Amount__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>NSF_Amount__c</columns>
    <columns>Invoice_Amount_Paid__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>